Fixes when syncing